[package]
name = "todo_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
ic-stable-structures = "0.5.6"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }